--- a/style/components/header.css
+++ b/style/components/header.css
@@ -208,7 +208,7 @@
     display: none;
   } */
   .menu__nav a.back:before {
-    content: url(../../../img/icons/back.svg);
+    content: url(../../img/icons/back.svg);
     margin-right: 16px;
   }
   .menu__nav a.back {
