--- a/style/components/burger.css
+++ b/style/components/burger.css
@@ -1,7 +1,7 @@
-.header__burger {
+.menu__burger {
   display: none;
 }
-@media (max-width: 1280px) {
+@media (max-width: 992px) {
   .menu__burger {
     display: block;
     position: relative;
@@ -35,13 +35,14 @@
   width: 0;
 }
 .menu-open .menu__burger {
-  width: 44px;
+  /* width: 44px; */
+  width: 0;
 }
 .menu-open .menu__burger::before {
-  top: calc(50% - 1px);
-  transform: rotate(-45deg);
+  /* top: calc(50% - 1px);
+  transform: rotate(-45deg); */
 }
 .menu-open .menu__burger::after {
-  bottom: calc(50% - 1px);
-  transform: rotate(45deg);
+  /* bottom: calc(50% - 1px);
+  transform: rotate(45deg); */
 }
