--- a/style/vars.css
+++ b/style/vars.css
@@ -1,6 +1,8 @@
 :root {
     --main-color: #000;
+    --light-background: #f6f4f7;
     --white-color: #fff;
     --blue-color: #00b0f2;
     --background-dark: #1b1918;
+    --red-color: #da3f3f;
 }
