--- a/style/components/btns.css
+++ b/style/components/btns.css
@@ -1,18 +1,65 @@
 .order-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 13px;
-  
-    font-weight: 400;
-    font-size: 16px;
-    color: var(--white-color);
-    border-radius: 4px;
-    background: var(--blue-color);
-    padding: 10px 15px;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 13px;
+
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--white-color);
+  border-radius: 4px;
+  background: var(--blue-color);
+  padding: 10px 15px;
+  text-align: center;
 }
 .order-btn:hover {
+  transition: 0.3s;
+  opacity: 0.7;
+}
+
+/* Fashion Btns */
+
+.buttons-fashion {
+    display: flex;
+    gap: 24px;
+    
+}
+
+
+.buttons-fashion__btn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 21px;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 3px;
     transition: 0.3s;
-    opacity: 0.7;
-  }
+    justify-content: center;
+
+}
+
+.btn-transparent {
+  color: var(--main-color);
+  border: 1px solid var(--main-color);
+}
+.btn-transparent:hover {
+  color: var(--white-color);
+  background: var(--main-color);
+}
+.btn-transparent:hover svg path {
+  stroke: var(--white-color);
+}
+.btn-black {
+  color: var(--white-color);
+  background: var(--main-color);
+}
+.btn-black:hover {
+  color: var(--main-color);
+  background: var(--white-color);
+  border: 1px solid var(--main-color);
+}
+
+
+
+
