--- a/style/fonts.css
+++ b/style/fonts.css
@@ -1,11 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-@import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-/* SangBleu */
-/* PT Sans Regular */
-/* Halvar Breitschrift Medium */
-/* TT Norms */
 @font-face {
     font-display: swap;
     font-family: "HalvarBreit";
@@ -26,4 +18,33 @@
     font-style: normal;
     font-weight: 400;
     src: url("../fonts/HalvarBreit-Rg.woff") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Jost";
+    font-style: normal;
+    font-weight: 600;
+    src: url("../fonts/Jost-SemiBold.woff") format("woff2");
+}
+@font-face {
+    font-display: swap;
+    font-family: "Jost";
+    font-style: normal;
+    font-weight: 500;
+    src: url("../fonts/Jost-Medium.woff") format("woff2");
+}
+@font-face {
+    font-display: swap;
+    font-family: "Jost";
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/Jost-Regular.woff") format("woff2");
+}
+@font-face {
+    font-display: swap;
+    font-family: "Jost";
+    font-style: normal;
+    font-weight: 300;
+    src: url("../fonts/Jost-Light.woff") format("woff2");
 }
