--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,8 @@
 @import url(../style/components/jumbo.css);
 @import url(../style/components/burger.css);
 @import url(../style/components/btns.css);
+@import url(../style/components/title.css);
+@import url(../style/components/light-section.css);
 /* Секции */
 @import url(../style/components/sections/home.css);
 @import url(../style/components/sections/brands.css);
@@ -16,3 +18,13 @@
 /* Шапка и подвал */
 @import url(../style/components/header.css);
 @import url(../style/components/footer.css);
+
+@import url(../style/components/fashion/header.css);
+@import url(../style/components/fashion/home.css);
+@import url(../style/components/fashion/functional.css);
+@import url(../style/components/fashion/format.css);
+@import url(../style/components/fashion/reviews.css);
+@import url(../style/components/fashion/cost.css);
+@import url(../style/components/fashion/offer.css);
+@import url(../style/components/fashion/questions.css);
+@import url(../style/components/fashion/faq.css);
