--- a/style/components/fashion/offer.css
+++ b/style/components/fashion/offer.css
@@ -37,10 +37,14 @@
   color: #6d7885;
 }
 .form-offer__error {
+  display: none;
   font-size: 14px;
   line-height: 114%;
   letter-spacing: -0.01em;
   color: #e64646;
+}
+.form-offer__error--active {
+  display: block;
 }
 .form-offer__personal {
   font-weight: 400;
