--- a/style/style.css
+++ b/style/style.css
@@ -28,3 +28,4 @@
 @import url(../style/components/fashion/offer.css);
 @import url(../style/components/fashion/questions.css);
 @import url(../style/components/fashion/faq.css);
+@import url(../style/components/fashion/modal.css);
