--- a/style/components/fashion/offer.css
+++ b/style/components/fashion/offer.css
@@ -34,7 +34,7 @@
   font-size: 20px;
   line-height: 100%;
   letter-spacing: -0.02em;
-  color: #6d7885;
+  color: var(--main-color);
 }
 .form-offer__error {
   display: none;
